<resources>
    <string name="app_name">Food Orderer</string>
    <string name="mig_900b_jamalpur_colony_ludhiana">MIG 900B Jamalpur Colony,Ludhiana</string>
    <string name="select_delivery_location">Select Delivery Location</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="price">Price</string>
    <string name="the_fastest_in_delivery_food_order_now">The fastest in Delivery Food.Order Now!</string>
    <string name="placeholder">test</string>
    <string name="recommended">Recommended</string>
    <string name="categories">Categories</string>
    <string name="address">Address</string>
    <string name="order_details">Order Details</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="hi">Hi ,</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_">Continue</string>
    <string name="already_a_customer">Already a customer</string>
    <string name="made_with">Made with</string>
    <string name="logout">Logout</string>
    <string name="change">Change</string>
    <string name="account">Account</string>
    <string name="bag">Bag</string>
    <string name="place_order_and_pay">Place order and pay</string>
    <string name="pay_now">Pay Now</string>
    <string name="delivery_in">Delivery in</string>
    <string name="button_for_decreasing_quantity">Button for decreasing quantity</string>
    <string name="button_for_increasing_quantity">Button for increasing quantity</string>
    <string name="cooking_some_delicious_food">Cooking some delicious food.</string>
    <string name="don_t_let_us_eat_all_alone">Don\'t let us eat all alone.</string>
    <string name="explore">Explore</string>
    <string name="cartoon_cooking_food">Cartoon cooking food.</string>
    <string name="items_in_bag">Items in Bag</string>
    <string name="go_to_bag">Go to Bag</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pincode">Pincode</string>
    <string name="area_locality">Area/Locality</string>
    <string name="house_flat_no">House/Flat No.</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="name">Name</string>
    <string name="login_or_signup">Login or SignUp</string>
    <string name="love">Love</string>
    <string name="add">Add</string>
    <string name="item_added_to_bag">Item added to bag.</string>
    <string name="popular">Popular Now</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="we_need_some_information_about_you_first_to_deliver_the_orders">We need some information about you first to deliver the orders.</string>
    <string name="city">City</string>
    <string name="address_type">Address Type</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="submit">Submit</string>
    <string name="add_address">Add Address</string>
    <string name="my_addresses">My Addresses</string>
    <string name="manage_all_your_saved_addresses">Manage all your saved addresses</string>
    <string name="my_orders">My Orders</string>
    <string name="view_all_your_orders">View all your orders</string>
    <string name="add_new_address">Add new address</string>
    <string name="remove_address">Remove Address</string>
</resources>