<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSavedAddresses_LV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/saved_addresses"
        android:textColor="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lvAddressBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="#ffffffff"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:paddingBottom="130dp"
        app:layout_constraintBottom_toTopOf="@id/btnAddAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSavedAddresses_LV"
        tools:listitem="@layout/listview_items" />

    <CheckBox
        android:id="@+id/cbMakeDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="Make default"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@id/btnContinue_savedAddresses"
        app:layout_constraintBottom_toTopOf="@id/btnAddAddress"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue_savedAddresses"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:visibility="gone"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/btnRemoveAddress"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRemoveAddress"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/remove_address"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnAddAddress"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/add_new_address"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>